# docs/openapi/v1/swagger.yaml
@@ -14,13 +14,13 @@ tags:
     description: Payments
   - name: user
     description: User of system
-  - name: report
-    description: report
+  - name: auth
+    description: Auth
 paths:
-  /user/login:
+  /auth/login:
     post:
       tags:
-        - user
+        - auth
       parameters:
         - in: body
           name: body
@@ -39,10 +39,10 @@ paths:
           description: internal server error
           schema:
             $ref: '#/definitions/BaseResponse'
-  /user/refresh:
+  /auth/refresh:
     post:
       tags:
-        - user
+        - auth
       parameters:
         - in: body
           name: body
@@ -55,6 +55,73 @@ paths:
             $ref: '#/definitions/BaseResponse'
         401:
           description: failed to refresh
+          schema:
+            $ref: '#/definitions/BaseResponse'
+        500:
+          description: internal server error
+          schema:
+            $ref: '#/definitions/BaseResponse'
+
+  /user/register:
+    post:
+      tags:
+        - user
+      parameters:
+        - in: body
+          name: body
+          schema:
+            $ref: '#/definitions/RegisterRequest'
+      responses:
+        200:
+          description: ok
+          schema:
+            $ref: '#/definitions/BaseResponse'
+        401:
+          description: failed
+          schema:
+            $ref: '#/definitions/BaseResponse'
+        500:
+          description: internal server error
+          schema:
+            $ref: '#/definitions/BaseResponse'
+  /user/request_to_change_password:
+    post:
+      tags:
+        - user
+      parameters:
+        - in: body
+          name: body
+          schema:
+            $ref: '#/definitions/RequestPasswordChangeRequest'
+      responses:
+        200:
+          description: ok
+          schema:
+            $ref: '#/definitions/BaseResponse'
+        401:
+          description: failed
+          schema:
+            $ref: '#/definitions/BaseResponse'
+        500:
+          description: internal server error
+          schema:
+            $ref: '#/definitions/BaseResponse'
+  /user/change_password:
+    post:
+      tags:
+        - user
+      parameters:
+        - in: body
+          name: body
+          schema:
+            $ref: '#/definitions/PasswordChangeRequest'
+      responses:
+        200:
+          description: ok
+          schema:
+            $ref: '#/definitions/BaseResponse'
+        401:
+          description: failed
           schema:
             $ref: '#/definitions/BaseResponse'
         500:
@@ -94,3 +161,45 @@ definitions:
     properties:
       token:
         type: string
+
+  RegisterRequest:
+    type: object
+    required:
+      - email
+      - password
+    properties:
+      name:
+        type: string
+      surname:
+        type: string
+      email:
+        type: string
+        format: email
+      password:
+        type: string
+        minLength: 8
+
+  RequestPasswordChangeRequest:
+    type: object
+    required:
+      - email
+    properties:
+      email:
+        type: string
+        format: email
+
+  PasswordChangeRequest:
+    type: object
+    required:
+      - email
+      - code
+      - new_password
+    properties:
+      email:
+        type: string
+        format: email
+      code:
+        type: string
+      new_password:
+        type: string
+        minLength: 8
